--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
           push: true
           tags: vidraxmax/frontend:latest
