--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
-          tags: vidraxmax/frontend:latest, vidraxmax/frontend:${{ github.sha }}-${{ github.run_number}}
+          tags: vidraxmax/frontend:latest, vidraxmax/frontend:${{ github.run_number}}
 
   build-be:
     runs-on: ubuntu-latest
@@ -56,4 +56,4 @@ jobs:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: vidraxmax/backend:latest, vidraxmax/backend:${{ github.sha }}-${{ github.run_number}}
+          tags: vidraxmax/backend:latest, vidraxmax/backend:${{ github.run_number}}
